this is the homework n1 in github for dotan!!!

--- a/new_file.html
+++ b/new_file.html
@@ -12,10 +12,11 @@ input:valid {
 	<body>
 
 	<form action="new_file1.html">
-  Name: <input type="text" name="fullname"><br>
-  Email: <input type="email" name="email" required><br>
+  Name: <input type="text" name="fullname" maxlength="30"><br>
+  Email: <input type="email" name="email" maxlength="30" required><br>
   password:<input type="password" name="password" required><br>
   repassword:<input type="password" name="repassword" required><br>
+ age:<input type="number" name="age" value=""><br>
   <input type="submit" value="send">
 </form>
 	
